rewrote material loading, added more materials

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="js/TrackballControls.js"></script>
 <script src="js/stats.js"></script>
 <script src="src/Util.js"></script>
+<script src="src/Materials.js"></script>
 <script src="src/Tile.js"></script>
 <script src="src/Editor.js"></script>
 
