added basic gui for selected tile properties

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
 <script src="js/three.js"></script>
+<script src="js/dat.gui.js"></script>
 <script src="js/Projector.js"></script>
 <script src="js/jszip.js"></script>
 <script src="js/OrbitControls.js"></script>
