--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 	<title>Editor</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<style>
-		body {
-			font-family: Monospace;
-			background-color: #f0f0f0;
-			margin: 0px;
-			overflow: hidden;
-		}
-	</style>
+
 </head>
 <body>
 
 
+		<link href="css/main.css" rel="stylesheet" />
+		<link id="theme" href="css/light.css" rel="stylesheet" />
 
-
+				<script src="js/ui.js"></script>
+		<script src="js/ui.three.js"></script>
 <script src="js/three.js"></script>
+<script src="src/ui/Menubar.js"></script>
+<script src="src/ui/Toolbar.js"></script>
+<script src="src/ui/Sidebar.js"></script>
+<script src="src/ui/Menubar.File.js"></script>
 <script src="js/dat.gui.js"></script>
 <script src="js/Projector.js"></script>
 <script src="js/jszip.js"></script>
@@ -30,7 +30,19 @@
 <script src="src/Tile.js"></script>
 <script src="src/Editor.js"></script>
 
+
+
+
+
+
+
 <script>
+var toolbar = new Toolbar( null );
+			document.body.appendChild( toolbar.dom );
+			var sidebar = new Sidebar( null );
+			document.body.appendChild( sidebar.dom );
+var menubar = new Menubar( null );
+document.body.appendChild( menubar.dom );
 initEditor();
 </script>
 
