--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <script src="src/ui/Sidebar.EditMode.js"></script>
 <script src="src/ui/Sidebar.Settings.js"></script>
 <script src="src/ui/Menubar.File.js"></script>
+<script src="src/ui/Menubar.Edit.js"></script>
+<script src="src/ui/Menubar.Sector.js"></script>
 <script src="js/dat.gui.js"></script>
 <script src="js/Projector.js"></script>
 <script src="js/jszip.js"></script>
